# TakAttack

./: .clangd  .gitignore  CMakeLists.txt  README.md  launcher_debug.sh  launcher_release.sh
include/: Engine.h  Entity.h  InputComponent.h  InputSystem.h  Map.h  RenderSystem.h  ResourceManager.h  SpriteComponent.h  View.h  Window.h
include/Components/: CastleUIComponent.hpp  InputComponent.hpp  SpriteComponent.hpp  TagComponent.hpp  TransformComponent.hpp
include/Debug/: Debug.hpp
include/Entities/: Entity.hpp
include/Game/: Engine.hpp  GridCell.h  Map.hpp  Window.hpp
include/Managers/: CursorManager.h  CursorManager.hpp  EventManager.hpp  ResourceManager.hpp
include/Systems/: InputSystem.hpp  RenderSystem.hpp  UISystem.hpp
include/UI/: Button.h  Button.hpp  DebugPanel.h  DebugPanel.hpp  MainMenu.h  MainMenu.hpp  View.hpp
include/UI/Elements/: Circle.hpp
include/UI/Widgets/: Button.hpp  CheckBox.hpp  IWidget.hpp  Label.hpp  ResizeSide.hpp  Widget.hpp
include/UI/Widgets/Buttons/: ButtonDefault.hpp  ButtonSprite.hpp
include/Utils/: Screen.h  Utils.hpp  Widgets.hpp
src/: CMakeLists.txt  Engine.cpp  Entity.cpp  InputSystem.cpp  Map.cpp  RenderSystem.cpp  ResourceManager.cpp  View.cpp  Window.cpp  main.cpp
src/Debug/: Debug.cpp  DebugPanel.cpp
src/Entities/: Entity.cpp
src/Game/: Engine.cpp  Map.cpp  Window.cpp
src/Managers/: CursorManager.cpp  EventManager.cpp  ResourceManager.cpp
src/Systems/: InputSystem.cpp  RenderSystem.cpp  UISystem.cpp
src/UI/: Button.cpp  DebugPanel.cpp  MainMenu.cpp  View.cpp
src/UI/Elements/: Circle.cpp
src/UI/Widgets/: Button.cpp  CheckBox.cpp  Label.cpp  ResizeSide.cpp
src/UI/Widgets/Buttons/: ButtonDefault.cpp  ButtonSprite.cpp
src/Utils/: Screen.cpp  Utils.cpp  Widgets.cpp
vendors/: CMakeLists.txt
vendors/EnTT/: CMakeLists.txt
vendors/ImGui/: CMakeLists.txt
vendors/SFML/: CMakeLists.txt
